--- a/index.css
+++ b/index.css
@@ -1,6 +1,3 @@
-* {
-  box-sizing: border-box;
-}
 @font-face {
   font-family: 'Samsung Sharp Sans';
   src: local('Samsung Sharp Sans'), local('SamsungSharpSans'),
@@ -150,6 +147,11 @@
   font-display: swap;
 }
 
+
+* {
+  box-sizing: border-box;
+}
+
 body{
     margin:0;
     font-family:'Aeonik';
@@ -158,19 +160,23 @@ body{
 p{
   font-size: 12px;
   color:#666666;
-  transition-duration: 3s;
+  transition: all 1s ease;
 }
 h3{
   color:#212121;
   font-weight:normal;
-  transition-duration: 3s;
+  transition: all 1s ease;
+}
+.navbar-right .icon{
+  display:none;
+  color:black;
 }
 /*header-section*/
 header{
     background-color:#ecf2f6;
 }
 .container{
-    width: 1024px;
+    max-width: 1024px;
     margin:auto;
     overflow:hidden;
 }
@@ -246,6 +252,7 @@ ul {
     text-decoration: none;
     display: block;
     text-align: left;
+    font-size: 14px;
   }
   
  .dropdown-content a:hover {
@@ -323,7 +330,7 @@ button{
   }
   .first-content-wrapper{
     margin:0 -10px;
-    overflow:hidden;
+    /*overflow:hidden;*/
   }
   .first-content{
    width:20%;
@@ -335,7 +342,7 @@ button{
     padding: 17px 26px;
     border-radius: 15px; 
     color:#21212a;
-    transition-duration: 3s;
+    transition: all 1s ease;
   }
   .img-holder {
     width: 53px;
@@ -344,6 +351,9 @@ button{
     background: #f4f7fa;
     text-align: center;
     border-radius: 50%;
+  }
+  .cards .img-holder img{
+    display:inline-block;
   }
   a{
     text-decoration:none;
@@ -354,9 +364,32 @@ button{
   .cards:hover h3, .cards:hover p{
     color:white;
   }
-  .first img.rightarr{
-    float:right;
-    width:4%;
+  .slider-1{
+    position:relative;
+  }
+  .slider-1 .slick-arrow {
+    position: absolute;
+    z-index: 1;
+    top: -111px;
+    opacity:0.5;
+    transition: all 1s ease;
+    cursor: pointer;
+  }
+  .slider-1 .slick-arrow:hover {
+    opacity:1;
+  }  
+  .slider-1 .slick-prev {
+    right: 55px;
+  }
+  .slider-1 .slick-next{
+    right: 7px;
+  }
+  .slider-1 .slick-arrow img{
+    width:90%;
+  }
+  .slider-1 .slick-arrow.slick-disabled {
+    opacity: 0;
+    pointer-events: none;
   }
   /*first section ends*/
   /*second section*/
@@ -401,22 +434,26 @@ button{
   }
   .second-content{
     width:25%;
-    padding:0 15px;
+    padding:15px;
     float:left;
   }
   .banner{
-     margin-bottom:30px;
      height:137px;
      padding-top:5px;
+     position:relative;
    }
    .banner p{
     font-size: 14px;
    }
-   .banner img{
-     margin-top:-6px;
+   .banner-image{
+     position:absolute;
+     z-index:1;
+     bottom: 10px;
+     width: 80%;
+     left: 20px;
    }
    .banner img.b1{
-     margin-right:32px;
+    padding-right: 64px;
    }
   /*third section ends*/
   /*fourth section*/
@@ -453,12 +490,14 @@ button{
   .imgholder2 img {
     width: 100%;
   }  
+  .fourth .post img{
+    display:inline-block;
+  }
   .fourth-content .content {
     background:#f4f7fa;
     margin: -4px 0 0 auto;
     padding: 15px;
   }
-  
   .fourth:before {
     content: '';
     position: absolute;
@@ -468,6 +507,24 @@ button{
     width:100%;
     background: linear-gradient(to right, #4490cc 0%, #5bc0d4 100%);
     z-index: -1;
+  }
+  .slider-2{
+    position:relative;
+  }
+  .slider-2 .slick-arrow{
+    position:absolute;
+    z-index:1;
+    bottom:93px;
+    right:16px;
+    opacity:0.2;
+    transition: all 1s ease;
+    cursor: pointer;
+  }
+  .slider-2 .slick-arrow:hover {
+    opacity:1;
+  }  
+  .slider-2 .slick-prev {
+    display:none;
   }
   /*fourth section ends*/
   
@@ -549,13 +606,36 @@ button{
     padding: 17px 37px 38px;
     background-color:white;
   }
+  .slider-3{
+    position:relative;
+  }
+  .slider-3 .slick-arrow{
+    position:absolute;
+    z-index:1;
+    top: -110px;
+    opacity:0.2;
+    transition: all 1s ease;
+    cursor: pointer;
+  }
+  .slider-3 .slick-prev{
+    right: 60px;
+  }
+  .slider-3 .slick-next{
+    right:11px;
+  }
+  .slider-3 .slick-arrow img{
+    width:90%;
+  }
+  .slider-3 .slick-arrow:hover {
+    opacity:1;
+  }  
   /*seven section ends*/
   /*footer section*/
   .footer{
     background-color:#1f2e50;
   }
   .container.last{
-    width:1140px;
+    max-width:1140px;
   }
   /*footer top*/
   .footer-top{
@@ -586,6 +666,15 @@ button{
   .smallfooter ul li{
     margin-bottom:10px;
     float:none;
+    position:relative;
+  }
+  .footerimg{
+    position:absolute;
+    z-index:1;
+  }
+  span.footerlist{
+    padding-left: 31px;
+    display: inline-block;
   }
   /*footer-top ends*/
   /*footer-bottom*/
